@@ -7,11 +7,6 @@ repositories {
 dependencies {
 	compile project(":Conquer")
 }
-tasks.withType(JavaCompile).each {
-	it.options.compilerArgs.add("--enable-preview")
-	it.options.compilerArgs.add("--target")
-	it.options.compilerArgs.add("${javaversion}")
-}
 jar {
 	include "org/jel/game/plugins/builtins/ChangeCitiesMinds**"
 	include "org/jel/game/plugins/builtins/ClanChangeMessage**"
